--- a/profile/themes/smc_base/scss/elements/sub-menu-block.scss
+++ b/profile/themes/smc_base/scss/elements/sub-menu-block.scss
@@ -9,7 +9,7 @@
 	border-radius: 3px;
 	font-family: $reg;
 	font-size: .85em;
-	margin-bottom: 5%;
+	margin-bottom: 40px;
 	
 	ul {
 	  margin: 0;
